     * replace() replaces a sequence within a string
     * type() function checks the type of a formula result
     * distance_between() - this was promoted from FormulaAI to core
     * pair() function that produces a key-value pair suitable for
       passing to tomap() - this also means key-value pairs are now
       serializable (relevant in FormulaAI)
   * Bugfixes:
     * Dice operator is now synced (where possible)
     * Modulus (%) operator now works on decimal numbers
     * Exponentiation (^) operator is now right-associative
     * Fix several math operations returning a very large negative number when
       the operation was invalid (for example, (-2) ^ 0.5).
       Now they return null instead.
   * Formula debugger (accessed with the debug() function):
     * Now works again, but is skipped unless in debug mode
     * No longer explodes on formulas using less-than
     * Some better information and formatting in the execution trace
     * You can now step through "where" variable assignments
   * FormulaAI no longer starts recruiting if a formula evaluates to the
     string 'recruit'.
   * Deprecated:
     * The fai/faiend keywords are deprecated as part of a move to clearly
       define the difference between "Wesnoth Formula Language", the language,
       and "FormulaAI", the AI engine that uses the language. For now they
       still work, but any future code should use wfl/wflend instead.
       Use of the .fai file extension is still fine for FormulaAI code;
       for other formula code in a separate file, .wfl is recommended instead.
 * Miscellaneous and bug fixes:
   * Resolve translated logo images not being used (bug #24357)
   * Ported the "hexometer" tool from Bash to Python 3
   * Recognize hotkey release events
   * Allow changing keybindings for scrolling the map.
   * Fix the move-to-targets candidate action of the default AI ignoring tunnels
   * Fix two rare bugs in the goto candidate action that resulted in goto moves